--- a/index.html
+++ b/index.html
@@ -98,18 +98,18 @@
                 </div>
                 <div class="fact">
                     <img src="images/icons/customers.png" alt="">
-                    <h4>54</h4>
-                    <p>Awards Winning</p>
+                    <h4>1458</h4>
+                    <p>Project Finished</p>
                 </div>
                 <div class="fact">
                     <img src="images/icons/email.png" alt="">
-                    <h4>54</h4>
-                    <p>Awards Winning</p>
+                    <h4>22578</h4>
+                    <p>Email Send</p>
                 </div>
                 <div class="fact">
                     <img src="images/icons/projects.png" alt="">
-                    <h4>54</h4>
-                    <p>Awards Winning</p>
+                    <h4>522</h4>
+                    <p>Client Worked</p>
                 </div>
             </div>
         </sectiion>
