--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </div>
                     <p class="loved-title-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                     <div class="loved-feature">
-                        <h5>Dexktop & Mobile Version</h5>
+                        <h5>Desktop & Mobile Version</h5>
                         <p class="loved-feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
                     </div>
                     <div class="loved-feature">
@@ -113,6 +113,48 @@
                 </div>
             </div>
         </sectiion>
+        <section class="some-projects">
+            <div class="some-projects-title">
+                <h2>Our Projects</h2>
+                <p class="some-projects-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="projects">
+                    <section class="row">
+                        <div class="pro-image"><img src="images/archi/g4.jpg" alt=""></div>
+                    </section>
+                    <section class="row second-row">
+                        <div class="pro-image"><img src="images/archi/g2.jpg" alt=""></div>
+                        <div class="pro-image"><img src="images/archi/g3.jpg" alt=""></div>
+                        <div class="second-row-third-container">
+                            <div class="pro-image">
+                                <img src="images/archi/g1.jpg" alt="">
+                            </div>
+                            <div class="pro-image">
+                                <img src="images/archi/g5.jpg" alt="">
+                            </div>
+                        </div>
+                    </section>
+                    <section class="row third-row">
+                        <div class="pro-image"><img src="images/archi/g6.jpg" alt=""></div>
+                        <div class="third-row-second-container">
+                            <div class="pro-image">
+                                <img src="images/archi/g7.jpg" alt="">
+                            </div>
+                            <div class="pro-image">
+                                <img src="images/archi/g8.jpg" alt="">
+                            </div>
+                            <div class="pro-image">
+                                <img src="images/archi/g9.jpg" alt="">
+                            </div>
+                            <div class="pro-image">
+                                <img src="images/archi/g1.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="pro-image"><img src="images/archi/g4.jpg" alt=""></div>
+                    </section>
+            </div>
+            
+        </section>
         <!-- Our Sponsor -->
         <div class="sponsor">
             <div class="sponsor-title">
